[package]
name = "event-game-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tower = "0.5"
